2011-05-06  Rajarshi Guha  <guhar@guest-193-062-206-199.wtgc.org>

	* man/gettotalcharge.Rd: Added man page entry for the total
	formal charge function

	* R/rcdk.R (get.total.formal.charge): Added new function to 
	return the total formal charge

2011-02-20  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* CHANGELOG: Updated CDK jar file to latest master plus some
	cherry picks from 1.4

	* NAMESPACE: Added a specific export for hasNext

2010-11-08  Rajarshi Guha  <guhar@office>

	* R/rcdk.R (get.exact.mass): Updated to check for exception when
	getting exact mass and print a more useful message.
	(get.natural.mass): Same as above

2010-11-07  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* man/getproperty.Rd: Updated man page for get.title

	* R/rcdk.R (get.title): Added a helper method to get the title
	of a molecule.

	* inst/doc/rcdk.Rnw (section{Input / Output}): Added a description
	of how to use the iterating version of the molecule loader

	* R/iterating.R (nextEl): Updated iterator so that we don't skip 
	the first molecule. Also reorganized the code so that it makes
	more sense

2010-10-21  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* Updated to latest CDK (1.4.x) which resolves bugs in formula
	generation and reading SD tags consisting of single spaces. Also
	updates to Murkco fragmentatin code which ensures that the proper
	fragments are returned when requested as molecule objects. This
	version also includes 3 new descriptors (FMF, acidic group and
	basic group counts). 
	

2010-05-29  Rajarshi Guha  <guhar@OfficeMac.local>

	* man/getfp.Rd: Updated docs for the newly included Pubchem fingerprint

	* R/rcdk.R: Updated fingerprinter to support the Pubchem fingerprints
